[tool.poetry]
name = "sas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
tabulate = "^0.8.7"
pandasgui = {git = "https://github.com/adamerose/pandasgui.git"}
pandas = "1.0.5"
termtables = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
