[tool.poetry]
name = "sas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
pandas = "1.0.5"
termtables = "^0.2.2"
dataframe_sql = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
